# BNN

./: BNN.sln  CMakeLists.txt  README.md
BNN/: Afun.h  BNN.cpp  BNN.h  BNN.vcxproj  BNN.vcxproj.filters  CMakeLists.txt  Drafts.h  Eigen_util.h  GD_nodes.h  Layer.h  Misc.h  NNet.h  Optimizer.h  Tensor.h
BNN/Image/: Image.cpp  Image.h  stb_image.h  stb_image_write.h
BNN/Layers/: AvgPool.h  AvgUpool.h  Conv.h  Dense.h  Dropout.h  Input.h  Layer.h  Layers.h  OutShuf.h  Output.h  PixShuf.h  Reshape.h  Resize.h  SConv.h  TConv.h
BNN/Layers - kopie/: AvgPool.h  AvgUpool.h  Conv.h  Dense.h  Dropout.h  Layers.h  SConv.h  Shape.h  TConv.h
BNN/Misc/: Afun.h  Drafts.h  Eigen_math.cpp  Eigen_math.h  Eigen_util.h  Misc.h  TF_Eigen_math.h
BNN/NNet/: GD_nodes.h  NNet.cpp  NNet.h  NNet_samples.cpp  NNet_samples.h  Optimizer.h
BNN_example2/: BNN_example2.vcxproj  main.cpp
Example1/: 0  1  2  3  8  CMakeLists.txt  Example1.cpp  Example1.vcxproj  Example1.vcxproj.filters  main.cpp  pch.h
Example2/: CMakeLists.txt  Example2.vcxproj  main.cpp
